# Cognito-users-management-admin-interface

./: README.md
App/: .env.template  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
App/src/: App.tsx  main.tsx  vite-env.d.ts
App/src/@types/: date.d.ts  enterprise.d.ts  event.d.ts
App/src/entities/: Enterprise.ts  EnterpriseSchema.ts  License.ts  LicenseSchema.ts
App/src/hooks/: useEnterprise.ts  useEnterpriseApi.ts  useEventApi.ts  useHttp.ts
App/src/layout/: Layout.tsx
App/src/pages/: Analytics.jsx  Dashboard.tsx  Enterprises.tsx  ErrorFallback.tsx  Licenses.jsx  Licenses.tsx
App/src/styles/: app.scss
backend/: Dockerfile  pyproject.toml
backend/app/: auth.py  dependencies.py  main.py  user.py  utils.py
backend/app/repositories/: common.py  enterprise_repository.py  event_repository.py
backend/app/repositories/models/: enterprise.py  enterprise_model.py  event_model.py
backend/app/routes/: enterprise.py  event.py
backend/app/routes/schemas/: base.py  entreprise.py  entreprise_schema.py  event_schema.py
backend/app/services/: enterprise_service.py  event_service.py
backend/auth/add_user_to_groups/: add_user_to_groups.py
backend/auth/check_admin_panel_email_domain/: check_admin_panel_email_domain.py
backend/streams/: process_dynamodb_stream_events.py  requirements.txt
backend/streams/repositories/: common.py  event_repository.py
backend/streams/repositories/models/: event_model.py
backend/tests/: test_api.py  test_api_cloud.py  test_custom_bot.py
cdk/: cdk.json  package-lock.json  package.json
(+9 files in other folders)
