[project]
name = "IQ-Admin-Panel-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.15",
    "email-validator>=2.2.0",
    "fastapi>=0.116.1",
    "jose>=1.0.0",
    "pydantic>=2.11.7",
    "pyhumps>=3.8.0",
    "python-jose>=3.5.0",
    "requests>=2.32.5",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.4.1",
    "ruff>=0.12.9",
]
test = [
    "pytest>=8.4.1",
]
